<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/barColor"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ToolBarStyle">

        <FrameLayout
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="6dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="@drawable/cart_iocn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/tv_productcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10dp" />

            </LinearLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/scanbarcode"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:foregroundGravity="right"
            android:src="@drawable/barcode"
            android:visibility="gone" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.pos.salon.customview.CustomTextViewOpenSans
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searctAlert"
                android:textColor="@color/menuTxtColor"
                android:textSize="25sp"
                app:fontFamily="@string/opensansregular" />

            <com.pos.salon.customview.CustomTextViewOpenSans
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/searchAlert2"
                android:textColor="@color/btnColor"
                android:textSize="30sp"
                app:fontFamily="@string/opensansregular" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgNotFount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/search" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rlNext"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:src="@drawable/barcode" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:id="@+id/lay_search"
            android:layout_height="@dimen/edt_search_height">
            <EditText
                android:id="@+id/searchEditBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edt_search_height"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/search_icon"
                android:drawablePadding="8dp"
                android:hint="@string/searchHint"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/menuTxtColor"
                android:textColorHint="@color/menuTxtColor"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/img_clear_search_product"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/cross"
                android:padding="4dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlProductList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/progressBar"
            android:layout_below="@id/lay_search"
            android:paddingBottom="10dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_centerHorizontal="true"
            android:layout_height="30dp"
            android:layout_above="@+id/rlNext"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/btnColor"
            android:padding="@dimen/layout_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.pos.salon.customview.CustomTextViewOpenSans
                    android:id="@+id/txtNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Cart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    app:fontFamily="@string/opensansregular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/txtNext"
                    android:src="@drawable/next" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
